EKS/deployments.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pao
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pao
  name: pao-cluster
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pao-cluster
      app.kubernetes.io/part-of: pao
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pao-cluster
        app.kubernetes.io/part-of: pao
    spec:
      containers:
        - name: pao-cluster
          image: docker.io/alisterxavier153/pao-server:1
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  namespace: pao
  name: pao-cluster
spec:
  selector:
    app.kubernetes.io/name: pao-cluster
    app.kubernetes.io/part-of: pao
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pao-cluster
  namespace: pao
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pao-cluster
                port:
                  number: 5001
# ---
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: prometheus-ebs
# provisioner: ebs.csi.aws.com
# reclaimPolicy: Delete
# volumeBindingMode: WaitForFirstConsumer
# parameters:
#   type: gp2 

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: prometheus-server
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: prometheus-ebs
#   resources:
#     requests:
#       storage: 4Gi
